Updated more tests